# human-attention-map-for-text-classification

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/: base.jsonnet
ham/: __init__.py
ham/commands/: __init__.py
ham/commands/preprocess_ham_dataset/: function.py  sub_command.py
ham/commands/split_dataset/: function.py  sub_command.py
ham/data/dataset_readers/: __init__.py  yelp.py
ham/models/: __init__.py  rnn_with_soft_attention.py
ham/modules/: attention.py
