[tool.poetry]
name = "ham"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
allennlp = "^1.0.0"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"
jupyterlab = "^2.1.5"
allennlp-server = {git = "https://github.com/allenai/allennlp-server"}
numpydoc = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
